--- a/main.css
+++ b/main.css
@@ -19,9 +19,9 @@ input[type=submit]:hover {
 }
 
 #ENBAS{
-    margin-top: 10%;
-    bottom: 60%;
-    background-color:lightgrey;
+    background-color:rgb(93, 130, 145);
+    margin-top: 5%;
+    padding-bottom: 5%;
     color:black;
     box-shadow: 0px 0px 0px 0.255px black;
 }
